// Adding a comment to the syntax will become the first
// comment in the output source file.
syntax = "proto3";

package simple;

// This comment is separated by a blank non-comment line, and will detach from
// the following comment on the message Simple.

/** Example comment on the Simple message */
message Simple {
  // Name field
  string name = 1 [deprecated = true];
  /** Age field */
  int32 age = 2 [deprecated = true];
  Child child = 3 [deprecated = true]; // This comment will also attach;
  string test_field = 4 [deprecated = true];
  string test_not_deprecated = 5 [deprecated = false];
}

message Child {
  string name = 1;
}
